[gd_scene load_steps=5 format=3 uid="uid://bpisn7glxa323"]

[ext_resource type="Script" path="res://Weapons/sword.gd" id="1_sk4ed"]
[ext_resource type="Texture2D" uid="uid://blt4c7ji3qupu" path="res://Resources/Weapons/sword.png" id="2_0xsrm"]
[ext_resource type="Texture2D" uid="uid://dtrxbqsymwp5a" path="res://Resources/Weapons/swordslash.png" id="3_3nffs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1shhj"]
size = Vector2(80, 16)

[node name="Sword" type="Node2D"]
script = ExtResource("1_sk4ed")

[node name="HitArea" type="Area2D" parent="."]
position = Vector2(8, 0)
rotation = -1.5708

[node name="Sword" type="Sprite2D" parent="HitArea"]
position = Vector2(40, 0)
scale = Vector2(4, 4)
texture = ExtResource("2_0xsrm")
metadata/_edit_lock_ = true

[node name="Shape" type="CollisionShape2D" parent="HitArea"]
position = Vector2(40, 0.000289917)
shape = SubResource("RectangleShape2D_1shhj")

[node name="Swordslash" type="Sprite2D" parent="."]
visible = false
position = Vector2(40, 0)
scale = Vector2(4, 4)
texture = ExtResource("3_3nffs")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_box_body_entered"]
